--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,20 +13,18 @@
 /* Задаем основной цвет шрифта и фона */
 :root {
   --primary-text-color: #434455;
-  --title-text-color: #2e2f42;
-  --accent-background-color: #4d5ae5;
-  --accent-text-color: #ffffff;
-  --first-background-color: #ffffff;
-  --second-background-color: #2e2f42;
+  --title-text-color-second-bg-color: #2e2f42;
+  --accent-bg-color-button-text-color: #4d5ae5;
+  --first-color: #ffffff;
   --third-background-color: #e5e5e5;
   --fourth-background-color: #f4f4fd;
   --button-background-color: #e7e9fc;
-  --button-text-color: #4d5ae5;
+  --button-bg-active-color: #404bbf;
 }
 
 body {
   color: var(--primary-text-color);
-  background-color: #ffffff;
+  background-color: var(--first-color);
 
   font-family: Roboto, sans-serif;
   letter-spacing: 0.02em;
@@ -43,7 +41,7 @@ h6 {
 
 /* Задаем цвет лого */
 .logo-top {
-  color: #4d5ae5;
+  color: var(--accent-bg-color-button-text-color);
   font-family: Raleway, sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -55,10 +53,10 @@ h6 {
   text-decoration: none;
 }
 .logo-top .logo-header {
-  color: #2e2f42;
+  color: var(--title-text-color-second-bg-color);
 }
 .logo-bottom {
-  color: #4d5ae5;
+  color: var(--accent-bg-color-button-text-color);
   font-family: Raleway, sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -70,7 +68,7 @@ h6 {
   text-decoration: none;
 }
 .logo-bottom .logo-footer {
-  color: #f4f4fd;
+  color: var(--fourth-background-color);
 }
 /* Убираем точки в списке */
 /* .list {
@@ -82,19 +80,20 @@ ul {
 
 /* Стилизуем меню навигации */
 .site-nav .link {
-  color: var(--title-text-color);
+  color: var(--title-text-color-second-bg-color);
   font-weight: 600;
   font-size: 16px;
   line-height: 1.5;
   text-decoration: none;
 }
-/* .site-nav .link:hover,
+.site-nav .link:hover,
 .site-nav .link:focus {
-  color: var(--accent-color);
+  color: var(--primary-text-color);
 }
-.site-nav .link.current {
-  color: var(--accent-color);
-} */
+.site-nav .link.current,
+.site-nav .link:active {
+  color: var(--accent-bg-color-button-text-color);
+}
 
 /* Стилизуем в шапке контакты */
 .contacts-nav .contacts {
@@ -103,25 +102,25 @@ ul {
   line-height: 1.5;
   text-decoration: none;
 }
-/* .contacts-nav .contacts:hover,
+.contacts-nav .contacts:hover,
 .contacts-nav .contacts:focus {
-  color: var(--accent-color);
-} */
+  color: var(--accent-bg-color-button-text-color);
+}
 
 /* Стилизуем героя */
 .hero {
-  background-color: var(--second-background-color);
+  background-color: var(--title-text-color-second-bg-color);
 }
 .hero-title {
-  color: #ffffff;
+  color: var(--first-color);
   font-weight: 600;
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
 }
 .hero-button {
-  color: #ffffff;
-  background-color: #4d5ae5;
+  color: var(--first-color);
+  background-color: var(--accent-bg-color-button-text-color);
   font-family: inherit;
   font-weight: 600;
   font-size: 16px;
@@ -131,9 +130,14 @@ ul {
   letter-spacing: 0.04em;
 }
 
+.hero-button:active,
+.hero-button:focus {
+  background-color: var(--button-bg-active-color);
+}
+
 /* Стилизуем заголовки секций */
 .section-title {
-  color: var(--title-text-color);
+  color: var(--title-text-color-second-bg-color);
   font-weight: 600;
   font-size: 36px;
   line-height: 1.11;
@@ -143,7 +147,7 @@ ul {
 
 /* Стилизуем заголовки контента внутри секций Future, Team, Portfolio */
 .content-title {
-  color: var(--title-text-color);
+  color: var(--title-text-color-second-bg-color);
   font-weight: 600;
   font-size: 20px;
   line-height: 1.2;
@@ -161,10 +165,10 @@ ul {
 
 /* Стилизуем футер */
 .footer {
-  background-color: var(--second-background-color);
+  background-color: var(--title-text-color-second-bg-color);
 }
 .footer-text {
-  color: #e7e9fc;
+  color: var(--button-background-color);
   font-size: 16px;
   line-height: 1.5;
 }
@@ -204,7 +208,7 @@ ul {
 /* Section filter  */
 
 .filter-button {
-  color: var(--button-text-color);
+  color: var(--accent-bg-color-button-text-color);
   background-color: var(--button-background-color);
   font-family: inherit;
   font-weight: 600;
@@ -218,8 +222,8 @@ ul {
 
 .filter-button:hover,
 .filter-button:focus {
-  color: #ffffff;
-  background-color: #4d5ae5;
+  color: var(--first-color);
+  background-color: var(--accent-bg-color-button-text-color);
 }
 /* Section portfolio  */
 
